payment headers with blue line

--- a/frontend/app/views/fragments/form/paymentOptions.scala.html
+++ b/frontend/app/views/fragments/form/paymentOptions.scala.html
@@ -2,7 +2,7 @@
 
 @import model.Benefits
 
-<fieldset class="fieldset">
+<fieldset class="fieldset payment-options-fieldset">
     <div class="fieldset__heading">
         <h2 class="form__heading">Select payment option</h2>
         <div class="form__note">Price includes VAT</div>
