--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -58,12 +58,9 @@
     border: 0;
     border-top: rem(2px) solid $c-neutral5;
     display: table;
-    padding: rem(($gs-baseline / 3) * 4 - 1) 0 rem($gs-baseline * 2);
+    padding: rem(($gs-baseline / 3) * 4 - 1) rem($gs-gutter / 2);
     margin: 0;
-
-    > &:first-child {
-        border-top: rem(2px) solid $mem-brandLightblue;
-    }
+    background-color: $c-neutral8; 
 
     @include mq(desktop) {
         width: rem(gs-span(8));
@@ -79,7 +76,6 @@
 .fieldset--no-top-border {
     border-top: 0;
 }
-
 
 .fieldset__heading {
     vertical-align: top;
@@ -112,7 +108,6 @@
         width: rem(gs-span(5) + $gs-gutter);
     }
 }
-
 
 .form-fields-group .form-field {
     margin-bottom: 0;
@@ -257,7 +252,7 @@
     -webkit-appearance: none;
 
     &:focus {
-        border-color: $c-neutral2;
+        border: rem(2px) solid $mem-brandLightblue;
     }
 
     @include mq(tablet) {
@@ -349,10 +344,7 @@
 
 .address-fieldset {
     overflow: hidden;
-    padding: 0;
-    .address-fieldset__inner {
-        padding: rem(($gs-baseline / 3) * 4 - 1) 0 rem($gs-baseline*2);
-    }
+    border-color: $mem-brandLightblue;
 }
 
 .password-strength-indicator {
@@ -410,10 +402,3 @@
     }
 }
 
-
-#payment-form {
-    .fieldset.address-fieldset,
-    .payment-options-fieldset {
-        border-top: rem(2px) solid $mem-brandLightblue!important;
-    }
-}
