Fix some warnings

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -1,5 +1,7 @@
 @(event: model.Eventbrite.EBEvent, pageInfo: model.PageInfo)
 
+@import play.twirl.api.Html
+
 @import views.support.Dates._
 @import views.support.Social.eventDetail
 @import com.github.nscala_time.time.Imports._
@@ -20,6 +22,7 @@
                 case Cancelled => { Cancelled }
                 case SoldOut => { Sold Out }
                 case PreLive => { Coming Soon }
+                case _ => {}
             }
             </button>
         }
