Create method in TicketSalesDate to work out if tier can buy a ticket.

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -31,9 +31,9 @@
 
 @becomeMemberCta(ticket: EBTickets) = @{
     val ticketSaleDates = model.TicketSaleDates.datesFor(event, ticket)
-    val friendSaleStartDate = ticketSaleDates.datesByTier(Tier.Friend)
+    val friendCanBuyTicket = ticketSaleDates.tierCanBuyTicket(Tier.Friend)
 
-    if(friendSaleStartDate > Instant.now) {
+    if(!friendCanBuyTicket) {
         Html("<div><a class='action js-member-cta' href='/join'>Become a member</a></div>")
     }
 }
