Add test for an event with a complicated ticket class structure
This includes 3 paid tickets, a free ticket and a donation ticket,
basically all the possible types in Eventbrite. Two of the paid tickets
start "Guardian Members", one of those has no start date.

--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -109,7 +109,7 @@
                         <div class="event-item__cta">
 
                             <div class="event-item__price">
-                            @for(ticket <- event.ticketClassesHead) {
+                            @for(ticket <- event.generalReleaseTicket) {
                                 @for(pricing <- ticket.cost) {
                                     <span class="event-item__price-amount">@pricing.formattedPrice</span>
                                     <span class="event-item__price-amout-discount">Partners/Patrons: @pricing.discountPrice</span>
