--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             @if(event.isNoTicketEvent == false) {
-                @for(ticket <- event.ticketClassesHead) {
+                @for(ticket <- event.generalReleaseTicket) {
                     <div class="event-ticket u-cf">
                         <div class="event-ticket__details">
 
@@ -150,7 +150,7 @@
 
                 @if(event.isNoTicketEvent == false) {
 
-                    @for(ticket <- event.ticketClassesHead) {
+                    @for(ticket <- event.generalReleaseTicket) {
 
                         <div class="event-content__tickets event-content--line-divider u-cf">
                             <div class="event-content__sale-dates u-cf">
