--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -43,7 +43,7 @@
 
                         @if(event.isNoTicketEvent == false) {
                             <div class="event-item__price">
-                            @for(ticket <- event.ticketClassesHead) {
+                            @for(ticket <- event.generalReleaseTicket) {
                                 @for(pricing <- ticket.cost) {
                                     <span class="event-item__price-amount">@pricing.formattedPrice</span>
                                     <span class="event-item__price-amout-discount">Partners/Patrons: @pricing.discountPrice</span>
