Change tier refactor, font change and spacing tweaks

--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -4,7 +4,7 @@
 @import com.gu.membership.salesforce.Tier
 @import helper._
 
-@main("Change Tier") {
+@main("Change Tier", htmlClass = "change-tier") {
 
     <main role="main">
         <div class="content__container">
