--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -44,7 +44,7 @@
 
     <section class="section-two-thirds">
 
-        @fragments.tickets.ticketsFunnel(1, StepTwo = "", StepThree = "", StepFour = "")
+        @fragments.joiner.joinStepCounter(1, 3)
 
         <div class="l-row">
 
