--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -13,7 +13,7 @@
         </header>
 
         <div class="steps">
-            @fragments.tickets.ticketsFunnel(2, StepOne = "", StepThree = "", StepFour = "")
+            @fragments.joiner.joinStepCounter(2, 3)
         </div>
 
         <div class="signin__actions">
