Group all of Touchpoint-backend config into one case class
Also logging a hash of the config, so I can check to see if I've made
a copy-n-paste error while I'm refactoring the config.

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -46,7 +46,7 @@
         css: {
             loaded: false
         },
-        stripePublicKey: '@Config.stripeApiConfig.publicKey',
+        stripePublicKey: '@Config.touchpointBackendConfig.stripe.publicKey',
         membership: {
             buildNumber: '@app.BuildInfo.buildNumber',
             eventImages: {
