--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -10,6 +10,7 @@
 
 .form {
     margin-bottom: rem($gs-baseline * 2);
+    position: relative;
 
     > .form__note {
         position: relative;
@@ -27,10 +28,26 @@
     }
 }
 
+.form__signin {
+    display: block;
+    
+    @include mq(desktop) {
+        position: absolute;
+        top: 9rem;
+        left: rem(gs-span(2));
+    }
+
+    @include mq(mem-full) {
+        top: 9rem;
+        left: rem(gs-span(2) + $gs-gutter);
+    }
+}
+
 .form__section-heading {
-    @include fs-headline(5);
+    @include fs-headline(7);
     margin-right: 0;
     font-weight: bold;
+    padding-bottom: rem($gs-gutter * 4);
 
     @include mq(desktop) {
         margin-left: rem(gs-span(2));
@@ -56,7 +73,7 @@
 
 .fieldset {
     border: 0;
-    border-top: rem(2px) solid $c-neutral5;
+    border-top: rem(2px) solid $mem-brandLightblue;
     display: table;
     padding: rem(($gs-baseline / 3) * 4 - 1) rem($gs-gutter / 2);
     margin: 0;
@@ -344,7 +361,6 @@
 
 .address-fieldset {
     overflow: hidden;
-    border-color: $mem-brandLightblue;
 }
 
 .password-strength-indicator {
