hidden radio button and add input:select

--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -5,7 +5,7 @@
 @import model.Benefits
 @import configuration.Config
 
-<fieldset class="fieldset">
+<fieldset class="fieldset fieldset--no-bg">
     @fragments.form.errorMessageDisplay()
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
