--- a/frontend/app/views/fragments/form/paymentOptions.scala.html
+++ b/frontend/app/views/fragments/form/paymentOptions.scala.html
@@ -19,9 +19,11 @@
                            value="annual"
                            checked="checked"
                            data-pricing-option-amount="@pricing.yearly"/>
-                    <span class="payment-label__title">Pay £@pricing.yearly/year</span>
-                    <span class="payment-label__amount">£@pricing.yearly one off annual payment (save £@pricing.yearlySaving a year)</span>
-                    <span class="payment-label__note">1 year membership, 3 months free</span>
+                    <span class="payment-label__wrapper">
+                      <span class="payment-label__title">Pay £@pricing.yearly/year</span>
+                      <span class="payment-label__amount">£@pricing.yearly one off annual payment (save £@pricing.yearlySaving a year)</span>
+                      <span class="payment-label__note">1 year membership, 3 months free</span>
+                    </span>
                 }
             </label>
 
@@ -33,9 +35,11 @@
                            id="monthly"
                            value="month"
                            data-pricing-option-amount="@pricing.monthly"/>
+                    <span class="payment-label__wrapper">
                     <span class="payment-label__title">Pay £@pricing.monthly/month</span>
                     <span class="payment-label__amount">£@pricing.monthly per month (£@pricing.yearlyMonthlyCost per year)</span>
                     <span class="payment-label__note">1 year membership, pay in instalments over a year</span>
+                    </span>
                 }
             </label>
         </div>
