--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -12,7 +12,7 @@
             <div class="event-item__meta">
                 <a href="/event/@event.id">
                     <h2 class="event-item__title">
-                        @if(event.getStatus == SoldOut){
+                        @if(event.isSoldOut){
                             <span class="event-status--sold-out">Sold Out</span>
                         }
                         @event.name.text
