--- a/frontend/app/views/fragments/event/ticketSales.scala.html
+++ b/frontend/app/views/fragments/event/ticketSales.scala.html
@@ -41,7 +41,7 @@
 
             <ul class="sale-dates__list u-unstyled u-cf">
                 <li class="sale-dates__item">
-                    <span class="sale-dates__item--left">Sale @if(event.getStatus == Completed){ended}else{ends}</span>
+                    <span class="sale-dates__item--left">Sale ends</span>
 
                     @ticketEndSaleDate(ticket.sales_end, ticketSaleDates.needToDistinguishTimes)
                 </li>
