--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -10,10 +10,10 @@
         <h2 class="form__heading">Name</h2>
     </div>
 
-    <div class="fieldset__fields">
+    <div class="fieldset__fields ">
 
         <div class="form-field">
-            <div class="form-field__half">
+            <div class="form-field">
                 <label class="label label--inline" for="name-first">First</label>
                 <input type="text"
                        name="name.first"
@@ -24,7 +24,7 @@
                        data-validation="required"/>
             </div>@*
             == Inline block whitespace ==
-            *@<div class="form-field__half">
+            *@<div class="form-field">
                 <label class="label label--inline" for="name-last">Last</label>
                 <input type="text"
                        name="name.last"
