form field adjustments and error alart styling

--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -60,7 +60,7 @@ county: Option[String], userCountry: Option[String])
             </div>
 
             <div class="form-field">
-                <label class="label" for="address-line-two-@(formType)">Address line 2</label>
+                <label class="label optional-marker" for="address-line-two-@(formType)">Address line 2</label>
                 <input type="text"
                        name="@(formType).lineTwo"
                        value="@address2"
@@ -84,7 +84,7 @@ county: Option[String], userCountry: Option[String])
 
             <div class="js-county-container-@(formType)">
                 <div class="form-field js-county-section">
-                    <label class="label" for="county-or-state-@(formType)">County</label>
+                    <label class="label optional-marker" for="county-or-state-@(formType)">County</label>
                     <input type="text"
                     name="@(formType).countyOrState"
                     value="@county"
