--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -9,7 +9,7 @@
     <div class="fieldset__heading">
         <h2 class="form__heading">Card details</h2>
         <div class="form__note js-card-details-note">
-            <p><img src="@Asset.at("images/padlock.png")" alt="" class="form-padlock"/> This site is secure</p>
+            <p class="form-padlock-text"><img src="@Asset.at("images/padlock.png")" alt="" class="form-padlock"/> This site is secure</p>
             <p class="credit-card-note"><span class="credit-card-note__header">First payment</span> will be taken today under the name Guardian News & Media.</p>
             <p class="credit-card-note"><span class="credit-card-note__header">Ongoing payments</span>
                 @Benefits.details(tier).pricing.fold{
